# lhcb-software

Alignment/: CMakeLists.txt  toolchain.cmake
Alignment/Alignment/AlignEvent/: CMakeLists.txt
Alignment/Alignment/AlignKernel/: CMakeLists.txt
Alignment/Alignment/AlignSolvTools/: CMakeLists.txt
Alignment/Alignment/AlignTrTools/: CMakeLists.txt
Alignment/Alignment/AlignmentDBVisualisationTool/: CMakeLists.txt
Alignment/Alignment/AlignmentInterfaces/: CMakeLists.txt
Alignment/Alignment/AlignmentMonitoring/: CMakeLists.txt
Alignment/Alignment/AlignmentTools/: CMakeLists.txt
Alignment/Alignment/Escher/: CMakeLists.txt
Alignment/Alignment/MisAligner/: CMakeLists.txt
Alignment/Alignment/TAlignment/: CMakeLists.txt
Alignment/Alignment/VeloAlignment/: CMakeLists.txt
Alignment/AlignmentSys/: CMakeLists.txt
Alignment/AlignmentSys/cmt/: .requirements.swp  requirements
Alignment/AlignmentSys/doc/: DoxyFile.cfg  MainPage.h  release.notes
Alignment/Calibration/OTCalibration/: CMakeLists.txt
Alignment/OnlAlignmentSys/cmt/: requirements  setup.x86_64-slc6-gcc48-dbg.vars  setup.x86_64-slc6-gcc48-opt.vars  version.cmt
Alignment/OnlAlignmentSys/python/: TrAligAnalyzer.py  TrAligIterator.py
Alignment/OnlAlignmentSys/x86_64-slc6-gcc48-dbg/: constituents.makecmtsave
Alignment/OnlAlignmentSys/x86_64-slc6-gcc48-opt/: setup.make  x86_64-slc6-gcc48-opt.make
Alignment/cmt/: project.cmt
AlignmentOnline/: CMakeLists.txt
AlignmentOnline/AlignmentOnline/AlignOnline/: ._CMakeLists.txt  CMakeLists.txt
AlignmentOnline/AlignmentOnline/PyAlignOnline/: CMakeLists.txt
AlignmentOnline/AlignmentOnline/PyGeneticOnline/: CMakeLists.txt  L0.tgz  TMVA_Genetic.tar.REMOVED.git-id  TMVA_Genetic.tgz.REMOVED.git-id  TMVA_Genetic_ROOT6.tgz.REMOVED.git-id  backupOnline.tgz
AlignmentOnline/AlignmentOnline/PyGeneticonline/: CMakeLists.txt
AlignmentOnline/AlignmentOnline/PyKaliOnline/: CMakeLists.txt
AlignmentOnline/AlignmentOnlineSys/: CMakeLists.txt
AlignmentOnline/AlignmentOnlineSys/cmt/: cleanup.csh  cleanup.sh  requirements  setup.csh  setup.sh  version.cmt
AlignmentOnline/AlignmentOnlineSys/doc/: DoxyFile.cfg  MainPage.h  release.notes
AlignmentOnline/Calibration/OTOnlineCalibration/: CMakeLists.txt
AlignmentOnline/cmt/: project.cmt
Analysis/: CMakeLists.txt
Analysis/Analysis/Ostap/: CMakeLists.txt
Analysis/Analysis/PyAna/: CMakeLists.txt
Analysis/Analysis/PyPAW/: CMakeLists.txt
Analysis/AnalysisSys/: CMakeLists.txt
Analysis/AnalysisSys/cmt/: requirements
Analysis/AnalysisSys/doc/: DoxyFile.cfg  MainPage.h  release.notes
Analysis/AnalysisSys/options/: PhysMCSys.opts
Analysis/ErasmusSys/cmt/: requirements
Analysis/ErasmusSys/doc/: release.notes
Analysis/Ex/LoKiExample/: CMakeLists.txt
Analysis/Ex/MicroDSTExample/: CMakeLists.txt
Analysis/Hlt/HltSelChecker/: CMakeLists.txt
Analysis/MicroDST/MicroDSTAlgorithm/: CMakeLists.txt
Analysis/MicroDST/MicroDSTBase/: CMakeLists.txt
Analysis/MicroDST/MicroDSTConf/: CMakeLists.txt
Analysis/MicroDST/MicroDSTInterfaces/: CMakeLists.txt
Analysis/MicroDST/MicroDSTTools/: CMakeLists.txt
Analysis/Phys/AnalysisConf/: CMakeLists.txt
Analysis/Phys/AnalysisPython/: CMakeLists.txt
Analysis/Phys/B2DDphi/: CMakeLists.txt
Analysis/Phys/BplusToPhiMuNu/: CMakeLists.txt  constituents.make  setup.make  x86_64-slc6-gcc48-opt.make
Analysis/Phys/Bs2PhiGamma/: README
Analysis/Phys/BsEtaCPhi/: CMakeLists.txt
Analysis/Phys/CC2DDStudies/: .nodehistory
Analysis/Phys/CommonMCParticles/: CMakeLists.txt
Analysis/Phys/DSTWriterTests/: .svnignore  CMakeLists.txt
Analysis/Phys/DSTWriters/: CMakeLists.txt
Analysis/Phys/DaVinciAngleCalculators/: CMakeLists.txt
Analysis/Phys/DaVinciAssociators/: CMakeLists.txt
Analysis/Phys/DaVinciMCTools/: CMakeLists.txt  GenericParticle2MCAssociator.h
Analysis/Phys/DaVinciMonitors/: CMakeLists.txt
Analysis/cmt/: project.cmt
Bender/: CMakeLists.txt  toolchain.cmake
Bender/BenderSys/: CMakeLists.txt
Bender/cmt/: project.cmt
Boole/: CMakeLists.txt
Boole/BooleSys/: CMakeLists.txt
Boole/cmt/: project.cmt
Brunel/: CMakeLists.txt
Brunel/BrunelSys/: CMakeLists.txt
Brunel/cmt/: project.cmt
DaVinci/: CMakeLists.txt
DaVinci/DaVinciSys/: CMakeLists.txt
DaVinci/DaVinciTests/: CMakeLists.txt
DaVinci/cmt/: project.cmt
Gauss/: CMakeLists.txt  toolchain.cmake
Gauss/GaussSys/: CMakeLists.txt
Gauss/Mint/: .project  install.x86_64-slc5-gcc43-opt.history
Gauss/Mint/src/: ._Utils  (+14 more)
Gauss/cmake/: FindALPGEN.cmake  FindHIJING.cmake  FindHerwig++.cmake  FindLHAPDF.cmake  FindPhotos++.cmake  FindPythia6.cmake  FindPythia8.cmake  FindTauola++.cmake  FindThePEG.cmake
Gauss/cmt/: project.cmt
Hlt/: CMakeLists.txt
Hlt/HltSys/: CMakeLists.txt
Hlt/TriggerCache/: CMakeLists.txt
Hlt/cmt/: project.cmt
LHCb/: CMakeLists.txt  toolchain.cmake
LHCb/GaudiConf/: .project  CMakeLists.txt
LHCb/GaudiConfUtils/: CMakeLists.txt
LHCb/GaudiMTTools/: CMakeLists.txt
LHCb/GaudiObjDesc/: CMakeLists.txt
LHCb/LHCbSys/: CMakeLists.txt
LHCb/cmake/: FindGraphviz.cmake
LHCb/cmt/: project.cmt
Lbcom/: CMakeLists.txt  toolchain.cmake
Lbcom/LbcomSys/: CMakeLists.txt
Lbcom/cmt/: project.cmt
Lovell/: CMakeLists.txt  toolchain.cmake
Lovell/LovellSys/: CMakeLists.txt
Lovell/VeloAnalysisFramework/: CMakeLists.txt
Lovell/VeloOfflineGUI/: CMakeLists.txt
Lovell/VeloWebGUI/: CMakeLists.txt
Lovell/cmt/: project.cmt
Moore/: CMakeLists.txt
Moore/MooreSys/: CMakeLists.txt
Moore/cmt/: project.cmt
MooreOnline/: CMakeLists.txt
MooreOnline/MooreOnlineConf/: CMakeLists.txt
MooreOnline/MooreOnlineSys/: .project  CMakeLists.txt
MooreOnline/MooreScripts/: .project  CMakeLists.txt
MooreOnline/cmt/: project.cmt
Online/: CMakeLists.txt
Online/OnlineSys/: CMakeLists.txt  release.notes
Online/cmt/: project.cmt
Rec/: CMakeLists.txt
Rec/RecSys/: CMakeLists.txt
Rec/cmt/: project.cmt
Stripping/: .project  CMakeLists.txt
Stripping/StrippingCache/: CMakeLists.txt
Stripping/StrippingSys/: .project  CMakeLists.txt
Stripping/cmt/: .project  project.cmt
(+36969 files in other folders)
